# bpt

./: Cargo.toml  README.md  dim_orgs_schema.yml  fct_monthly_financials_schema.yml  fct_yearly_financials_schema.yml  sales_sync_schema.yml
research/: codegen_helpers.sql  duckdb_adapters.sql  generate_model_yaml.sql  schema_template.yml  snowflake__get_columns_in_relation.sql
src/: main.rs
test_artifacts/: manifest.json
