[package]
name = "bpt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions here:
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
duckdb = "0.10.0"
anyhow = "1.0"
futures = "0.3"
serde_yaml = "0.9.31"
rayon = "1.8.1"
